Adapted copyright headers and license.